--- a/index.html
+++ b/index.html
@@ -14,53 +14,121 @@
         .font-lexend {
             font-family: "Lexend", sans-serif;
         }
+
+        header {
+            position: sticky;
+            top: 0;
+            overflow: hidden;
+
+        }
     </style>
 </head>
 
 <body class="font-lexend">
-    <header></header>
+    <header class=" my-8">
+        <nav class="flex  mx-auto w-11/12">
+            <button class="text-xl bg-lime-400 font-bold px-8 py-3 rounded-lg"><a href="blog.html" target="_blank"
+                    rel="noopener noreferrer">Blog</a></button>
+            <div class="flex w-2/5 justify-center items-center gap-4 mx-auto">
+                <img src="assets/logo.png" alt="">
+                <p class="text-xl font-bold">Donate Bangladesh</p>
+            </div>
+            <div class="flex w-1/5 justify-end items-center gap-4">
+                <img src="assets/coin.png" alt="">
+                <p class="font-bold "> <span id="main-balance">5500</span> BDT</p>
+            </div>
+
+        </nav>
+    </header>
     <main>
-        <div class="m-16">
-            <div class="card lg:card-side bg-base-100 shadow-xl p-8">
-                <figure>
+        <div class="w-2/5 mx-auto px-16 mt-32">
+            <button class="text-xl bg-lime-400 font-bold px-8 py-3 rounded-lg mr-4 active">Donation</button>
+            <button id="donateSection" class="text-xl bg-lime-400 font-bold px-8 py-3 rounded-lg">History</button>
+        </div>
+        <div class="m-16 ">
+            <div class="card lg:card-side bg-base-100 shadow-xl p-8 border-2 rounded-lg">
+                <figure class="w-6/12">
                     <img src="assets/noakhali.png" alt="Album" />
                 </figure>
-                <div class="card-body">
-                    <h2 class="card-title">New album is released!</h2>
-                    <p>Click the button to listen on Spotiwhy app.</p>
-                    <input type="text" name="" id="" class="border-4 p-4 my-4">
+                <div class="card-body w-6/12 py-0">
+                    <button class="btn justify-start w-fit">
+                        <img src="assets/coin.png" alt="">
+                        0 BDT
+                    </button>
+                    <h2 class="card-title my-4">Donate for Flood at Noakhali, Bangladesh</h2>
+                    <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
+                        donation will help provide essential supplies and to those affected by this disaster. Every
+                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                        and making a positive impact on the lives of those in need. </p>
+                    <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full py-6" />
                     <div class="card-actions">
                         <button class="btn bg-lime-400 w-full text-xl font-bold">Donate Now</button>
                     </div>
                 </div>
             </div>
-            <div class="card lg:card-side bg-base-100 shadow-xl p-8">
-                <figure>
+            <div class="card lg:card-side bg-base-100 shadow-xl p-8 border-2 rounded-lg">
+                <figure class="w-6/12">
                     <img src="assets/feni.png" alt="Album" />
                 </figure>
-                <div class="card-body">
-                    <h2 class="card-title">New album is released!</h2>
-                    <p>Click the button to listen on Spotiwhy app.</p>
-                    <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Listen</button>
+                <div class="card-body w-6/12 py-0">
+                    <button class="btn justify-start w-fit">
+                        <img src="assets/coin.png" alt=""> <span id="donate-balance"> 0 BDT</span>
+
+                    </button>
+                    <h2 class="card-title my-4">Donate for Flood Relief in Feni,Bangladesh</h2>
+                    <p> The recent floods in Feni have devastated local communities, leading to severe disruption and
+                        loss. Your generous donation will help provide immediate aid, including food, clean water, and
+                        medical supplies, to those affected by this calamity. Together, we can offer crucial support and
+                        help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
+                        real difference. Please consider donating today to assist those in urgent need. </p>
+                    <input id="input-donate-amount" type="text" placeholder="Write Donation Amount"
+                        class="input input-bordered w-full py-6" />
+                    <div class="card-actions">
+                        <!-- You can open the modal using ID.showModal() method -->
+                        <button id="btn-donate-now" class="btn bg-lime-400 w-full text-xl font-bold"
+                            onclick="my_modal_3.showModal()">Donate Now</button>
+                        <dialog id="my_modal_3" class="modal">
+                            <div class="modal-box flex flex-col justify-center items-center gap-6">
+                                <h3 class="text-4xl font-bold">Congrates!</h3>
+                                <img class="text-2xl" src="assets/coin.png" alt="">
+                                <p class="py-4">You Have Donated For Humankind</p>
+                                <p class="font-bold text-xl">Successfully</p>
+                                <form method="dialog">
+                                    <button class="btn btn-lg btn-ghost bg-slate-200 text-lg">Close
+                                        Confirmation</button>
+                                </form>
+                            </div>
+                        </dialog>
                     </div>
                 </div>
             </div>
-            <div class="card lg:card-side bg-base-100 shadow-xl p-8">
-                <figure>
+            <div class="card lg:card-side bg-base-100 shadow-xl p-8 border-2 rounded-lg">
+                <figure class="w-6/12">
                     <img src="assets/quota-protest.png" alt="Album" />
                 </figure>
-                <div class="card-body">
-                    <h2 class="card-title">New album is released!</h2>
-                    <p>Click the button to listen on Spotiwhy app.</p>
-                    <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Listen</button>
+                <div class="card-body w-6/12 py-0">
+                    <button class="btn justify-start w-fit">
+                        <img src="assets/coin.png" alt="">
+                        0 BDT
+                    </button>
+                    <h2 class="card-title my-4">Aid for Injured in the Quota Movement</h2>
+                    <p> The recent Quota movement has resulted in numerous injuries and significant hardship for many
+                        individuals. Your support is crucial in providing medical assistance, rehabilitation, and
+                        necessary supplies to those affected. By contributing, you help ensure that injured individuals
+                        receive the care and support they need during this challenging time. Every donation plays a
+                        vital role in alleviating their suffering and aiding in their recovery. Please consider making a
+                        donation to support these brave individuals in their time of need.</p>
+                    <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full py-6" />
+                    <div class="card-actions">
+                        <button class="btn bg-lime-400 w-full text-xl font-bold">Donate Now</button>
                     </div>
                 </div>
             </div>
+
         </div>
     </main>
     <footer></footer>
+    <script src="js/donate-section.js"></script>
     <script src="js/donate-now.js"></script>
 </body>
 
