--- a/history.html
+++ b/history.html
@@ -25,7 +25,9 @@
 </head>
 
 <body>
-
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ea, sit corrupti aliquid possimus molestias minus,
+        sint sapiente deleniti culpa, quia officiis architecto nostrum dolorem laboriosam quasi laborum! Cupiditate,
+        optio.</h1>
 </body>
 
 </html>
