--- a/blog.html
+++ b/blog.html
@@ -15,13 +15,6 @@
         .font-lexend {
             font-family: "Lexend", sans-serif;
         }
-
-        /* header {
-            position: sticky;
-            top: 0;
-            overflow: hidden;
-
-        } */
     </style>
 </head>
 
@@ -32,7 +25,7 @@
                     rel="noopener noreferrer">Home</a></button>
             <div class="flex w-2/5 justify-center items-center gap-4 mx-auto">
                 <img src="assets/logo.png" alt="">
-                <p class="text-xl font-bold">Donate Bangladesh</p>
+                <p class="text-xl font-bold hidden lg:block">Donate Bangladesh</p>
             </div>
             <div class="flex w-1/5 justify-end items-center gap-4">
                 <img src="assets/coin.png" alt="">
